# IZ1

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
.github/workflow/: ci.yml
.github/workflows/: ci.yml
lib/: CMakeLists.txt  header.h  init.c  init.h  read.c  read.h  tools.c  tools.h
linters/: run.sh
tests/: CMakeLists.txt  mytest.cpp
